- Consistency fixes for keyboard events across all major ports.
- Added EVT_RIBBONBAR_TAB_LEFT_DCLICK event (snowleopard).
- Fix display of right aligned columns in wxGenericListCtrl (jl).
- Restore text drag-and-drop in wxSTC broken by Scintilla 2 update (Jens Lody).
- Improve wxGTK print/page setup dialog (rafravago).
- Added wxToolbook XRC handler (Andrea Zanellato).

MSW:

- Native implementation of wxHyperlinkCtrl and wxProgressDialog under modern
  Windows versions (Rickard Westerlund, GSoC 2010 project).
- Fix Cygwin 1.7 build (David Gangola).
- Allow using wxDC::DrawText() with multiline texts.
- Fix wxBitmapButton best size determination broken in 2.9.1.



2.9.1:
------

INCOMPATIBLE CHANGE SINCE 2.9.0

- wxStandardPaths doesn't use vendor name by default under MSW and OSX to
  remain compatible with 2.8 behaviour but this makes it incompatible with
  2.9.0. Please use UseAppInfo(AppInfo_AppName | AppInfo_VendorName) explicitly
  to use the vendor name in the paths returned by wxStandardPaths.

- wxDataViewModel::GetAttr() is now const, as it should have been from the very
  beginning. You will need to change it to be const in your derived model
  class too if you override it.


All:

- Added wxFileSystemWatcher (Bartosz Bekier, Google Summer of Code project).
- Added wxStd{Input,Output}Stream classes (Jonathan Liu).
- Include port number in host header in wxHTTP (Marcin 'Malcom' Malich).
- Added wxTempFile::Flush().
- Added support for wxLongLong and wxULongLong in wxVariant.
- Added wxVector::swap().
- Many wxLog improvements:
 * wxLogXXX() functions are now thread-safe.
 * Log levels can now be set independently for different log components.
 * wxLog::DoLogRecord() has access to the location of the log message
   (file, line and function name) and id of the thread which generated it.
 * SetThreadActiveTarget() allows to set up thread-specific log targets.
- Fix output buffer overflow in wxBase64Decode() (Eric W. Savage).